feature/APP-025 economy launch
